<resources>
    <string name="app_name">小词典</string>

    <!--主页面-->
    <string name="str_choose">选择模式</string>
    <string name="str_choose1">选择模式（中-英）</string>
    <string name="str_choose2">选择模式（英-中）</string>
    <string name="str_fill">填空模式</string>
    <string name="str_fill1">填空模式（英-中）</string>
    <string name="str_fill2">填空模式（中-英）</string>
    <string name="str_addwords">添加单词</string>
    <string name="str_dictionary">词库</string>
    <string name="str_translate_enzh">中英互译</string>
    <string name="str_translate">在线翻译</string>
    <string name="str_translate_more">多语言翻译</string>
    <string name="str_help">软件使用说明</string>

    <!--功能-->
    <string name="str_delete">清空词库</string>
    <string name="str_english">单词</string>
    <string name="str_chinese">翻译</string>
    <string name="str_translation_result">翻译结果</string>
    <string name="str_del">删除</string>
    <string name="str_modify">修改</string>
    <string name="str_cancel">取消</string>
    <string name="str_search">查找</string>
    <string name="str_grasp">完全掌握这个单词了</string>
    <string name="str_next">下一个</string>
    <string name="str_exit">确定退出</string>
    <string name="str_exitapp">确定退出软件？</string>
    <string name="str_yes">确定</string>
    <string name="str_no">取消</string>
    <string name="str_zhoren">中文/英文</string>
    <string name="str_please_input">请输入需要翻译的文本</string>
    <string name="str_i">个人中心</string>
    <string name="str_recite_words">背单词</string>

    <!--单词本-->
    <string name="str_uni4">大学四级\n5197词</string>
    <string name="str_uni6">大学六级\n2581词</string>
    <string name="str_mshcool">中考词汇\n2729词</string>
    <string name="str_hshcool">高考词汇\n2327词</string>

    <!--软件使用说明-->
    <string name="str_aboutme">本软件由\n Android_小黑 \n独立开发,仅供学习交流！小黑微信：yu1563782588</string>
    <string name="str_descrip_choose">
        注意：由于模式特性，你的词库内单词数超过五个才能进入。\n\n
        进入选择模式后，页面将会随机给出一个单词（或中文），四个选项中有一个选项为正确选项，其余三个为词库中随机获取的非正确选项。\n\n
        选择任意选项后，除正确答案外，其余选项都将提示出对应的翻译；并且选择正确时所选选项将变为绿色；选择错误时所选选项将变为红色，并且正确答案将会用绿色标出。\n
        选择完成后，选项右下方会出现一个“下一个”按钮，点击按钮即可刷新当前单词。\n\n
        点击屏幕下方“完全掌握这个单词了”，可以对本单词进行“掌握（删除）”，词库中将删除此单词。
    </string>
    <string name="str_descrip_fill">
        进入填空模式后，页面将随机给出一个单词（或中文），只有在输出框中输入正确答案，并点击输入框右下方的“确定”按钮，才会进行答案的判断。\n\n
        当填写答案正确时：填写的内容将变为绿色；\n\n
        当填写答案错误时：填写的内容将变为绿色，并会提示出正确答案；\n\n
        答案判断完可以点击输入框右下方的“下一个”，刷新当前单词。\n\n
        点击输入框下侧“完全掌握这个单词了”，可以对本单词进行“掌握（删除）”，词库中将删除此单词。
    </string>
    <string name="str_descrip_dictionary">
        词库列表显示词库内所有单词\n
        搜索：在顶部搜索框中输入想要搜索的单词，点击“查找”按钮，即可找到所查找单词的位置\n\n
        清空：点击右上角“清空词库”按钮即可清空词库所有单词（不可恢复，谨慎处理！）\n\n
        长按任意单词行弹出对话框，通过对话框可所选单词进行删除或更改
    </string>
    <string name="str_descrip_translation">
        注意：中英互译功能为网络功能（需要数据连接）\n\n
        在输入框内输入需要翻译的中文（或英文），点击“翻译”按钮即可得到对应的翻译\n\n
        网络连接较慢时，请耐心等候翻译结果，无需多次点击“翻译”按钮
    </string>

    <string name="str_modify_aims">修改每日目标</string>
    <string name="str_right"><![CDATA[>]]></string>
    <string name="str_from_labguage">原文的语言类型：</string>
    <string name="str_to_language">译文的语言类型：</string>
    <string name="str_tip_copy">Tip:点击翻译结果框可复制翻译结果至手机剪切板！</string>
    <string name="str_save">保存修改</string>
    <string name="str_max_length_13">昵称最长为13个字符</string>
    <string name="str_max_length_40">签名最长为40个字符</string>
    <string name="str_today_goal">今日目标</string>
    <string name="str_today_ok">今日已完成</string>


    <string-array name="language_from">
        <item>自动检测</item>
        <item>中文</item>
        <item>英文</item>
        <item>粤语</item>
        <item>文言文</item>
        <item>日语</item>
        <item>韩语</item>
        <item>法语</item>
        <item>西班牙语</item>
        <item>泰语</item>
        <item>阿拉伯语</item>
        <item>俄语</item>
        <item>葡萄牙语</item>
        <item>德语</item>
        <item>意大利语</item>
        <item>希腊语</item>
        <item>荷兰语</item>
        <item>波兰语</item>
        <item>保加利亚语</item>
        <item>爱沙尼亚语</item>
        <item>丹麦语</item>
        <item>芬兰语</item>
        <item>捷克语</item>
        <item>罗马尼亚语</item>
        <item>斯洛文尼亚语</item>
        <item>瑞典语</item>
        <item>匈牙利语</item>
        <item>繁体中文</item>
        <item>越南语</item>
    </string-array>

    <string-array name="language_to">
        <item>中文</item>
        <item>英文</item>
        <item>粤语</item>
        <item>文言文</item>
        <item>日语</item>
        <item>韩语</item>
        <item>法语</item>
        <item>西班牙语</item>
        <item>泰语</item>
        <item>阿拉伯语</item>
        <item>俄语</item>
        <item>葡萄牙语</item>
        <item>德语</item>
        <item>意大利语</item>
        <item>希腊语</item>
        <item>荷兰语</item>
        <item>波兰语</item>
        <item>保加利亚语</item>
        <item>爱沙尼亚语</item>
        <item>丹麦语</item>
        <item>芬兰语</item>
        <item>捷克语</item>
        <item>罗马尼亚语</item>
        <item>斯洛文尼亚语</item>
        <item>瑞典语</item>
        <item>匈牙利语</item>
        <item>繁体中文</item>
        <item>越南语</item>
    </string-array>

    <!--词性 ：名词、介词、形容词、副词、数词、动词、及物动词、不及物动词、代词、连词、感叹词、冠词 -->
    <string-array name="word_part">
        <item>词性</item>
        <item>n.</item>
        <item>prep.</item>
        <item>adj.</item>
        <item>adv.</item>
        <item>num.</item>
        <item>v.</item>
        <item>vt.</item>
        <item>vi.</item>
        <item>pron.</item>
        <item>conj.</item>
        <item>int.</item>
        <item>art.</item>
    </string-array>

</resources>