<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <com.yjx.androidword.MyView.MyFirstButton
            android:id="@+id/btn_mode_choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_choose2" />

        <com.yjx.androidword.MyView.MyFirstButton
            android:id="@+id/btn_mode_choose2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/str_choose1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp">

        <com.yjx.androidword.MyView.MyFirstButton
            android:id="@+id/btn_mode_fill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_fill1" />

        <com.yjx.androidword.MyView.MyFirstButton
            android:id="@+id/btn_mode_fill2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/str_fill2" />

    </LinearLayout>

    <com.yjx.androidword.MyView.MyFirstButton
        android:id="@+id/btn_addwords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:text="@string/str_addwords" />

    <com.yjx.androidword.MyView.MyFirstButton
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:text="@string/str_dictionary" />

    <com.yjx.androidword.MyView.MyFirstButton
        android:id="@+id/btn_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:text="@string/str_help" />

    <TextView
        android:id="@+id/txv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:shadowColor="@color/colorShadowBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/str_about"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>