<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_from_labguage"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/language_from"
            android:gravity="center" />

    </LinearLayout>


    <EditText
        android:id="@+id/edit_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_stroke"
        android:gravity="center"
        android:hint="@string/str_please_input"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxHeight="200dp"
        android:minHeight="100dp"
        android:padding="5dp"
        android:textSize="16sp"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_to_language"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_to"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/language_to"
            android:gravity="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/txv_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_stroke"
        android:gravity="center"
        android:hint="@string/str_translation_result"
        android:maxHeight="200dp"
        android:minHeight="100dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_tip_copy"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <com.yjx.androidword.MyView.MyFirstButton
        android:id="@+id/btn_translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/str_chinese" />

</LinearLayout>