<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_stroke"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/img_yellowback"
            android:gravity="center"
            android:shadowColor="@color/colorLightGray"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:text="@string/str_help"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_dismiss"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="-50dp"
            android:background="@drawable/img_back" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/txv_mode_choose"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/txv_stroke"
            android:gravity="center"
            android:text="@string/str_choose"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txv_mode_fill"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_fill"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txv_dictionary"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_dictionary"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/txv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_descrip_choose"
            android:textColor="@color/colorDeGray"
            android:textSize="16sp"
            android:textStyle="bold" />

    </ScrollView>


</LinearLayout>
