<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_stroke"
        android:gravity="center"
        android:hint="@string/str_english"
        android:singleLine="true"
        android:padding="10dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edit_chinese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_stroke"
        android:gravity="center"
        android:hint="@string/str_chinese"
        android:singleLine="true"
        android:padding="10dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_background"
        android:shadowColor="@color/colorShadowBlack"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:text="@string/str_addwords"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</LinearLayout>
