<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/img_icon"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/str_max_length_13"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="13"
            android:singleLine="true"
            android:textSize="28sp"
            tools:ignore="NestedWeights,UnusedAttribute" />

        <EditText
            android:id="@+id/edit_msg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/str_max_length_40"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="40"
            android:padding="20dp"
            android:textSize="22sp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <com.yjx.androidword.MyView.MyFirstButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/str_save" />

</LinearLayout>